Fix background image scaling issue on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,6 @@
 }
 
 html {
-  height: 100%;
-  width: 100%;
   min-width: 300px;
 }
 
@@ -21,7 +19,9 @@ html {
 }
 
 body {
-  background: black url('../img/dark_forest.jpg') center fixed;
+  background: black url('../img/dark_forest.jpg') fixed;
+  background-position: center center;
+  background-repeat: no-repeat;
   background-size: cover;
 }
 
